src/objects/Transazione__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>filtrato per RT=negozio</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transazioni</relationshipLabel>
        <relationshipName>Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chiave_Transazione__c</fullName>
        <externalId>true</externalId>
        <label>Chiave Transazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>filtrato per RT=cliente</description>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transazioni (Cliente)</relationshipLabel>
        <relationshipName>Transazioni1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codice_Carta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codice Carta</label>
        <referenceTo>Loyalty__c</referenceTo>
        <relationshipLabel>Transazioni</relationshipLabel>
        <relationshipName>Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Transazione__c</fullName>
        <label>Data Transazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Importo_Riduzione__c</fullName>
        <label>Importo Riduzione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale__c</fullName>
        <label>Importo Totale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantita_Prodotti__c</fullName>
        <label>Quantita Prodotti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantita_Punti__c</fullName>
        <label>Quantita Punti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transazione Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>